# MandelbrotGenerator

./: CMakeLists.txt  main.cpp
ImageData/: Bmp.cpp  Bmp.h  ImageData.h
Mandelbrot/: Mandelbrot.h
